--- a/src/index.css
+++ b/src/index.css
@@ -153,7 +153,7 @@ button {
 }
 
 .navbarNav {
-  width: 100%;
+  width: 90%;
   margin-top: 0.75rem;
   overflow-y: hidden;
 }
@@ -171,6 +171,11 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.navbarListItem p {
+	font-weight: 600;
+	margin: 0.5em 0;
 }
 
 .navbarListItemName,
